--- a/pag_sobre/sobre.css
+++ b/pag_sobre/sobre.css
@@ -9,7 +9,13 @@ body {
 
 header {
     background-color: #202020;
-    padding: 20px;
+    padding: 10px;
+}
+
+header img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 header h1 {
