--- a/pag_sobre/sobre.css
+++ b/pag_sobre/sobre.css
@@ -43,8 +43,8 @@ nav ul li a {
 
 nav ul li a:hover {
     text-decoration: underline;
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
-
 section {
     padding: 40px;
     max-width: 800px;
