--- a/pag_sobre/sobre.css
+++ b/pag_sobre/sobre.css
@@ -8,42 +8,34 @@ body {
 }
 
 header {
-    background-color: #202020;
-    padding: 10px;
+    text-align: center;
+    padding: 20px;
+    border-bottom: 1px solid #202020;
 }
 
-header img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+.logo {
+    margin-bottom: 15px;
 }
 
-header h1 {
-    margin: 0;
-    font-size: 28px;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
+.sidebar {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
+    padding: 15px;
+    background-color: #111;
 }
 
-nav ul li {
-    display: inline;
-}
-
-nav ul li a {
-    color: rgb(255, 255, 255);
+.sidebar a {
+    color: white;
     text-decoration: none;
-    font-weight: bold;
+    font-size: 1.1em;
+    transition: color 0.3s;
 }
 
-nav ul li a:hover {
-    text-decoration: underline;
-    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, background-color 0.3s ease-in-out;
+.sidebar a:hover {
+    color: #00ff00;
+    transform: scale(1.1); 
+
 }
 section {
     padding: 40px;
