--- a/Loginv2.0/login.css
+++ b/Loginv2.0/login.css
@@ -76,3 +76,48 @@ p{
 #botao:hover{
     background-color: #948a52;
 }
+
+@media screen and (max-width: 768px) {
+    .box1 {
+        width: 80%;
+        height: auto;
+        padding: 20px;
+    }
+    
+    img {
+        height: 80px;
+        width: 80px;
+    }
+    
+    input {
+        height: 30px;
+        width: 90%;
+    }
+    
+    #botao {
+        width: 80%;
+    }
+}
+
+/* Celulares pequenos */
+@media screen and (max-width: 480px) {
+    .box1 {
+        width: 90%;
+        height: auto;
+        padding: 15px;
+    }
+    
+    img {
+        height: 70px;
+        width: 70px;
+    }
+    
+    input {
+        height: 28px;
+        width: 100%;
+    }
+    
+    #botao {
+        width: 90%;
+    }
+}
